[package]
name = "password_manager"
version = "0.1.0"
authors = ["n-inferno <marya.andrijanowa@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
whoami = "1.1.2"
dirs = "1.0.5"
text_io = "0.1.8"
rpassword = "5.0.1"
serde_json = "1.0.48"
serde = {version = "1.0.117", features = ["derive"]}